cabal-version:       3.0

name:                vector-turtle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aneilmac/vector-turtle#readme
license:             BSD-3-Clause
author:              Archibald Neil MacDonald
maintainer:          example@example.com
copyright:           2022 Archibald Neil MacDonald
category:            Web
build-type:          Simple

executable vector-turtle
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: base >= 4.13 && < 5
               , gloss
               , transformers
               , worldturtle >= 0.2 && < 0.3